docs: note mvnd for speed and JPMS out-of-the-box in README
Add an intro sentence that, because Lathe uses the exact parameters Maven
computed (module path, --add-opens, --patch-module, ...), modular (JPMS)
projects work out of the box with no manual setup. Add a Setup tip that the
Maven Daemon (mvnd) noticeably speeds up the metadata-generating builds.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>